--- a/task4/index.html
+++ b/task4/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h2>
-      <a href="#">Измените текст ссылки</a>
+      <a href="https://ya.ru/">Измените текст ссылки</a>
       <script src="script.js"></script>
     </h2>
   </body>
