--- a/task5/index.html
+++ b/task5/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css">
     <title>JS-Start. 5 задача</title>
 </head>
 
@@ -10,9 +11,9 @@
     <form action="#">
         <label>
             Текст
-            <input type="text" placeholder="Введите текст" />
+            <input type="text" value = "" placeholder="Введите текст" />
         </label>
-        <button id="button" type="submit">
+        <button type="submit">
             Вывести текст в консоль и удалить из формы
         </button>
     </form>
